WIP: adicionando métodos http get e put (verificando e editando usuários)

--- a/UserRegistrationAPI/UserRegistrationAPI.csproj
+++ b/UserRegistrationAPI/UserRegistrationAPI.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NovaPasta\**" />
+    <Content Remove="NovaPasta\**" />
+    <EmbeddedResource Remove="NovaPasta\**" />
+    <None Remove="NovaPasta\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove=".gitignore" />
   </ItemGroup>
 
